--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -12,7 +12,6 @@
         android:icon="@drawable/ic_chat" />
 
     <item android:id="@+id/action_settings"
-        android:title="settings"
+        android:title="Settings"
         android:icon="@drawable/ic_settings" />
-
 </menu>
