--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -1,13 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_search"
-        android:title="All"
-        android:icon="@drawable/ic_list_black_24dp" />
 
-    <item android:id="@+id/action_user"
+    <item android:id="@+id/action_all"
+        android:title="All"
+        android:icon="@drawable/ic_list" />
+
+    <item android:id="@+id/action_account"
         android:title="Account"
         android:icon="@drawable/ic_account_circle" />
 
-    <item android:id="@+id/inbox"
+    <item android:id="@+id/action_inbox"
         android:title="Inbox"
         android:icon="@drawable/ic_chat" />
 
