--- a/app/src/main/res/layout/fragment_all_categories.xml
+++ b/app/src/main/res/layout/fragment_all_categories.xml
@@ -1,9 +1,19 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.silbytech.mundo.SettingsFragment">
+
+    <ProgressBar
+        android:id="@+id/load_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        tools:layout_editor_absoluteX="193dp" />
 
     <ListView
         android:id="@+id/categoriesListView"
@@ -17,4 +27,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
-</FrameLayout>
+</RelativeLayout>
