added empty list TextView

--- a/app/src/main/res/layout/fragment_all_categories.xml
+++ b/app/src/main/res/layout/fragment_all_categories.xml
@@ -27,4 +27,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
+
+    <TextView
+        android:id="@+id/emptyCategoriesList"
+        android:textColor="@android:color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="@string/nothingToShow" />
+
 </RelativeLayout>
