--- a/app/src/main/res/layout/fragment_all_categories.xml
+++ b/app/src/main/res/layout/fragment_all_categories.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.silbytech.mundo.SettingsFragment">
+    tools:context="com.silbytech.mundo.fragments.SettingsFragment">
 
     <ProgressBar
         android:id="@+id/load_progress"
@@ -15,18 +15,12 @@
         android:layout_centerInParent="true"
         tools:layout_editor_absoluteX="193dp" />
 
-    <ListView
-        android:id="@+id/categoriesListView"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
-        android:dividerHeight="6dp"
-        android:divider="#d1d1d1"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"
+        android:scrollbars="none" />
 
     <TextView
         android:id="@+id/emptyCategoriesList"
@@ -35,6 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textAppearance="?android:textAppearanceMedium"
-        android:text="@string/nothingToShow" />
+        android:text="@string/loading" />
 
 </RelativeLayout>
