--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.silbytech.mundo.InboxFragment">
+    tools:context="com.silbytech.mundo.fragments.InboxFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
