--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,60 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.silbytech.mundo.SettingsFragment">
+    tools:context="com.silbytech.mundo.fragments.SettingsFragment">
 
 
-    <ListView
-        android:id="@+id/categoriesListView2"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
-        android:dividerHeight="6dp"
-        android:divider="#d1d1d1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
-
-
-    <!--<android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/imgSettings"
+            android:src="@drawable/ic_settings"
+            android:layout_centerInParent="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
-            <TextView
-                android:textSize="20sp"
-                android:layout_marginTop="3dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginBottom="3dp"
-                android:textColor="@color/black"
-                android:text="Sports Equipement"
-                android:id="@+id/firstCategoryTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_below="@+id/firstCategoryTitle"
-                android:id="@+id/recyclerView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <View
-                android:layout_below="@+id/recyclerView"
-                android:background="@color/black"
-                android:layout_width="match_parent"
-                android:layout_height="1.5dp"/>
-        </RelativeLayout>
-        
-
-
-    </android.support.constraint.ConstraintLayout>-->
-
-
+        <TextView
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/imgSettings"
+            android:text="@string/settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </FrameLayout>
