Added progress bar

--- a/app/src/main/res/layout/fragment_user_listing.xml
+++ b/app/src/main/res/layout/fragment_user_listing.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.silbytech.mundo.UserListingFragment">
 
+    <ProgressBar
+        android:id="@+id/load_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        tools:layout_editor_absoluteX="193dp" />
+
     <ListView
         android:id="@+id/userListingListView"
         android:layout_width="match_parent"
