--- a/app/src/main/res/layout/single_user_listings_frag.xml
+++ b/app/src/main/res/layout/single_user_listings_frag.xml
@@ -13,6 +13,8 @@
     <RelativeLayout
         android:layout_marginLeft="4dp"
         android:layout_marginStart="4dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginEnd="2dp"
         android:id="@+id/listingInfoFrag"
         android:layout_toRightOf="@+id/listingImg"
         android:layout_toEndOf="@+id/listingImg"
