--- a/app/src/main/res/layout/full_single_users_listing.xml
+++ b/app/src/main/res/layout/full_single_users_listing.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,6 +24,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp"
+                    android:clickable="true"
                     android:layout_marginStart="5dp"
                     android:text="@string/cancel"
                     android:textColor="@color/link_blue"
@@ -46,6 +47,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="5dp"
+                    android:clickable="true"
                     android:layout_marginRight="5dp"
                     android:text="@string/done"
                     android:textColor="@color/link_blue"
@@ -81,4 +83,4 @@
     </android.support.constraint.ConstraintLayout>
 
 
-</FrameLayout>
+</RelativeLayout>
