--- a/app/src/main/res/layout/map_frag.xml
+++ b/app/src/main/res/layout/map_frag.xml
@@ -10,13 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/smallGoogleMap"
+        <fragment
+            android:id="@+id/map"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
             class="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </com.google.android.gms.maps.MapView>
-
+            android:layout_height="match_parent"/>
 
     </RelativeLayout>
 </RelativeLayout>
