--- a/app/src/main/res/layout/price_boxes_fragment.xml
+++ b/app/src/main/res/layout/price_boxes_fragment.xml
@@ -2,13 +2,12 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="90dp">
+    android:layout_height="50dp">
 
     <RelativeLayout
         android:id="@+id/pricesSection"
-        android:layout_below="@+id/upperFrag"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -33,7 +32,6 @@
 
                     <TextView
                         android:id="@+id/tvPriceHour"
-                        android:text="$17.55"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
@@ -68,7 +66,6 @@
 
                     <TextView
                         android:id="@+id/tvPriceDay"
-                        android:text="$17.55"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
@@ -104,7 +101,6 @@
 
                     <TextView
                         android:id="@+id/tvPriceWeek"
-                        android:text="$17.55"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
