--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -23,7 +23,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="382dp"
+        android:layout_width="309dp"
         android:layout_height="118dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -33,5 +33,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mundo_logo_BG" />
+        app:srcCompat="@drawable/mundo_logo_bg" />
 </android.support.constraint.ConstraintLayout>
