--- a/app/src/main/res/layout/sign_up_layout.xml
+++ b/app/src/main/res/layout/sign_up_layout.xml
@@ -6,11 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <ImageView
+        android:id="@+id/imgBackArrow"
+        android:clickable="true"
+        android:src="@drawable/ic_arrow_back"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp" />
+
     <TextView
+        android:layout_below="@+id/imgBackArrow"
         android:id="@+id/tvTitle"
         android:textSize="30sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:text="@string/welcome"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
