--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -6,11 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <ImageView
+        android:id="@+id/imgBackArrow"
+        android:clickable="true"
+        android:src="@drawable/ic_arrow_back"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_width="40dp"
+        android:layout_height="30dp" />
+
     <TextView
         android:id="@+id/tvTitle"
         android:textSize="30sp"
+        android:layout_below="@+id/imgBackArrow"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:text="@string/welcome_back_title"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
@@ -66,8 +78,17 @@
             android:text="@string/login"/>
 
         <TextView
-            android:id="@+id/tvOr"
+            android:id="@+id/tvForgotPassword"
             android:layout_below="@+id/btnLogin"
+            android:layout_centerHorizontal="true"
+            android:text="@string/forgot_password"
+            android:clickable="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tvOr"
+            android:layout_below="@+id/tvForgotPassword"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
