--- a/app/src/main/res/layout/landing_layout.xml
+++ b/app/src/main/res/layout/landing_layout.xml
@@ -6,18 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/logoImg"
+        android:layout_width="333dp"
+        android:layout_height="81dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="Mundo"
-        android:textAlignment="center"
-        android:textSize="45sp"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/mundo_logo_bg"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,12 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="52dp"
         android:text="Mundo lets you rent out your items that you are not currently using"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/logoImg" />
 
     <Button
         android:id="@+id/btnSignUp"
@@ -40,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="56dp"
         android:layout_marginStart="48dp"
+        android:layout_marginLeft="48dp"
         android:text="SIGN UP"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
