--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,31 +3,24 @@
       xmlns:tools="http://schemas.android.com/tools">
 
     <item
-        android:id="@+id/itemPurchaseHistory"
-        android:orderInCategory="100"
-        android:title="Purchase History"
-        android:visible="true"
-        app:showAsAction="never"/>
-
-    <item
         android:id="@+id/itemSettings"
         android:orderInCategory="100"
-        android:title="Settings"
         android:visible="true"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:title="Settings" />
 
     <item
         android:id="@+id/itemProfile"
         android:orderInCategory="100"
-        android:title="Profile"
         android:visible="true"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:title="Profile" />
 
     <item
         android:id="@+id/itemLogout"
         android:orderInCategory="100"
-        android:title="Logout"
         android:visible="true"
-        app:showAsAction="never"/>
+        app:showAsAction="never"
+        android:title="Logout" />
 
 </menu>
