--- a/app/src/main/res/layout/sign_up_layout.xml
+++ b/app/src/main/res/layout/sign_up_layout.xml
@@ -133,4 +133,14 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp" />
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/sign_up_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        tools:layout_editor_absoluteX="193dp" />
 </RelativeLayout>
